<resources>
    <string name="app_name">YonStore</string>

    <string name="sign_in">Sign In</string>
    <string name="network_not_connected">Network not connected</string>
    <string name="invalid_phone_password">Please provide a valid phone number and password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="your_email">Your Email</string>
    <string name="welcome_to_yonstore">Welcome to YonStore</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="have_a_account">Have a account?</string>
    <string name="full_name">Full Name</string>
    <string name="password_again">Password Again</string>
    <string name="search_product">Search Product</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="offer">Offer</string>
    <string name="account">Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="category">Category</string>
    <string name="category_is_empty">Category is empty!</string>
    <string name="more_category">More Category</string>
    <string name="mega_sale">Mega Sale</string>
    <string name="see_more">See More</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="full_name_is_empty">Full Name is Empty!</string>
    <string name="retype_password_fail">Retype password is incorrect</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="please_type_code_we_sent_to_your_phone">Please type code we sent to your phone</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend</string>
    <string name="code_empty">Cannot be empty</string>
    <string name="your_cart">Your Cart</string>
    <string name="recomended_nproduct">Recomended\nProduct</string>
    <string name="we_recommend_the_best_for_you">We recommend the best for you</string>
    <string name="name_product_demo">FS - Nike Air Max 270 React Sneakers</string>
    <string name="price_demo">$299.43</string>
    <string name="discount_demo">24% Off</string>
    <string name="favorite_product">Favorite Product</string>
    <string name="pls_enter_complete_info">Please enter complete information</string>

    <string name="man_fashion">Man Fashion</string>
    <string name="woman_fashion">Woman Fashion</string>
    <string name="man_shirt">Man Shirt</string>
    <string name="man_work_equipment">Man Work Equipment</string>
    <string name="man_t_shirt">Man T-Shirt</string>
    <string name="man_shoes">Man Shoes</string>
    <string name="man_pants">Man Pants</string>
    <string name="man_underwear">Man Underwear</string>
    <string name="woman_dress">Dress</string>
    <string name="woman_skirt">Skirt</string>
    <string name="woman_t_shirt">Woman T-Shirt</string>
    <string name="woman_shoes">Man Shoes</string>
    <string name="woman_pants">Woman Pants</string>
    <string name="woman_bag">Woman Bag</string>
    <string name="woman_bikini">Bikini</string>
    <string name="select_size">Select Size</string>
    <string name="select_color">Select Color</string>
    <string name="specification">Specification</string>
    <string name="review_product">Review Product</string>
    <string name="_0_0_0_review">0.0 (0 review)</string>
    <string name="you_might_also_like">You Might Also Like</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="pass">********</string>
    <string name="manager">Manager</string>
    <string name="logout">Logout</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_is_empty">Product name is empty!</string>
    <string name="name">Name</string>
    <string name="write_something">Write something…</string>
    <string name="style">Style</string>
    <string name="image">Image</string>
    <string name="product_code">Product Code</string>
    <string name="product_code_is_empty">Product Code is empty!</string>
    <string name="add_product">Add Product</string>
    <string name="event">Event</string>
    <string name="add_event">Add Event</string>
    <string name="statistic">Statistic</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="dialog_remove_product">Remove this product?</string>
    <string name="dialog_remove_address">Remove this address?</string>
    <string name="dialog_confirm_order">Confirm this order</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="title_style">#Style</string>
    <string name="product_size">Product Size:</string>
    <string name="product_color">Product Color:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_style">Add Style</string>
    <string name="add">Add</string>
    <string name="white">white</string>
    <string name="black">black</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="_0">0</string>
    <string name="size">size</string>
    <string name="color">color</string>
    <string name="price">Price</string>
    <string name="product_price">Product Price(USD)</string>
    <string name="product_discount">Product Discount(%)</string>
    <string name="discount">Discount</string>
    <string name="success">Success</string>
    <string name="title">Title</string>
    <string name="title_event">Event Title</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="create_new_event">Create New Event</string>
    <string name="apply_for">Apply For</string>
    <string name="time_error">Please enter a valid time!</string>
    <string name="product">Product</string>
    <string name="scan_barcode">Move the camera to the code container barcode to scan</string>
    <string name="input">Input</string>
    <string name="new_product">New Product</string>
    <string name="search">Search</string>
    <string name="product_manager">Product Manager</string>
    <string name="product_code_not_exists">Product code don\'t exists</string>
    <string name="product_code_exists">Product code already exists</string>
    <string name="product_not_found">Product not found</string>
    <string name="save_product">Save Product</string>
    <string name="apply">Apply</string>
    <string name="total_price">Total Price</string>
    <string name="items">Items</string>
    <string name="shipping">Shipping</string>
    <string name="import_charges">Import Charges</string>
    <string name="check_out">Check Out</string>
    <string name="add_address">Add Address</string>
    <string name="edit">Edit</string>
    <string name="country_or_region">Country or region</string>
    <string name="street_address">Street Address</string>
    <string name="street_address_2_optional">Street Address 2 (Optional)</string>
    <string name="city">City</string>
    <string name="state_province_region">State/Province/Region</string>
    <string name="zip_code">Zip Code</string>
    <string name="payment_on_delivery">Payment On Delivery</string>
    <string name="credit_card_or_debit">Credit Card Or Debit</string>
    <string name="paypal">Paypal</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="thank_you_for_shopping_using_yonstore">thank you for shopping using yonstore</string>
    <string name="back_to_order">Back To Order</string>
    <string name="default_notification_channel_id">Default Notification Channel Id</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name">Default Notification Channel Name</string>
    <string name="order_status">Order Status</string>
    <string name="pending">Pending</string>
    <string name="packing">Packing</string>
    <string name="arriving">Arriving</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="date_shipping">Date Shipping</string>
    <string name="no_resi">No. Resi</string>
    <string name="notify_me">Notify Me</string>
    <string name="order_details">Order Details</string>
    <string name="unknown">unknown</string>
    <string name="write_review">Write Review</string>
    <string name="all_review">All Review</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="review">Review</string>
    <string name="write_review_title">Please write Overall level of satisfaction with your shipping / Delivery Service</string>
    <string name="write_your_review">Write Your Review</string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="all_order">All Order</string>
</resources>
