<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintBottom_toTopOf="@id/tvSuccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_success"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/success"
        android:textColor="@color/dark"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/thank_you_for_shopping_using_yonstore"
        android:textColor="@color/grey"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSuccess" />

    <Button
        android:id="@+id/btnBackToOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/back_to_order"
        android:textAllCaps="false"
        android:textSize="@dimen/_13ssp"
        app:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/tvTks" />

</androidx.constraintlayout.widget.ConstraintLayout>
