<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="tech.leson.yonstore.ui.addproduct.dialog.addStyle.AddStyleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_border"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/add_style"
                android:textColor="@color/dark"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="@id/btnClose"
                app:layout_constraintEnd_toStartOf="@id/btnClose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:onClick="@{(View) -> viewModel.onClick(View)}"
                android:padding="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light"
                app:layout_constraintTop_toBottomOf="@id/btnClose" />

            <TextView
                android:id="@+id/tvTitleSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/product_size"
                android:textColor="@color/dark"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toStartOf="@id/edtSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/edtSize" />

            <EditText
                android:id="@+id/edtSize"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:background="@null"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/size"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTitleColor"
                app:layout_constraintTop_toBottomOf="@id/btnClose"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <TextView
                android:id="@+id/tvTitleColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/product_color"
                android:textColor="@color/dark"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toStartOf="@id/tvColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvColor" />

            <TextView
                android:id="@+id/tvColor"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:onClick="@{(View) -> viewModel.onClick(View)}"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/color"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11ssp"
                app:drawableEndCompat="@drawable/ic_arrow_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTitleColor"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSize" />

            <TextView
                android:id="@+id/tvTitleQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:text="@string/quantity"
                android:textColor="@color/dark"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toStartOf="@id/edtQuantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/edtQuantity" />

            <EditText
                android:id="@+id/edtQuantity"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:background="@null"
                android:digits="0123456789"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/_0"
                android:inputType="number|textFilter"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTitleQuantity"
                app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
                tools:ignore="Autofill,LabelFor" />

            <View
                android:id="@+id/line0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/light"
                app:layout_constraintTop_toBottomOf="@id/tvTitleQuantity" />

            <TextView
                android:id="@+id/btnAddStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_margin="1dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:onClick="@{(View) -> viewModel.onClick(View)}"
                android:text="@string/add"
                android:textColor="@color/dark"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
